--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"stdio.h": "c",
 		"math.h": "c",
-		"header.h": "c"
+		"header.h": "c",
+		"cmath": "cpp",
+		"*.tcc": "cpp"
 	}
 }
